# gstreamer-log-viewer

./: .gitignore  CMakeLists.txt  README.md  customfilterproxymodel.cpp  customfilterproxymodel.h  gstreamerlogmodel.cpp  gstreamerlogmodel.h  gstreamerlogview.cpp  gstreamerlogview.h  gstreamerlogwidget.cpp  gstreamerlogwidget.h  gstreamerlogwidget.ui  lineedit.cpp  lineedit.h  main.cpp  main.qrc  mainwindow.cpp  mainwindow.h  mainwindow.qrc  mainwindow.ui  preferences.cpp  preferences.h  preferences.ui  timestamp.cpp  timestamp.h  timestampview.cpp  timestampview.h
